# KeyClaw

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  gitleaks.toml
.claude/skills/multi-agent-dev-team/: SKILL.md
.claude/skills/multi-agent-dev-team/references/roles/: architect.md  code-reviewer.md  dev-lead.md  dev-peer.md  pm.md  qa-engineer.md  (+3 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  rust.yml
docs/: README.md  architecture.md  configuration.md  macos-gui-apps.md  secret-patterns.md  threat-model.md
docs/plans/: 2026-03-07-production-readiness-project.md  2026-03-07-production-readiness.md  2026-03-07-release-candidate-verification.md  2026-03-08-shannon-entropy-design.md  2026-03-10-local-proxy-trace.md
docs/release/: maintainer-checklist.md
scripts/: package-release.sh  render-homebrew-formula.sh  smoke-release.sh  sync-production-readiness-project.py  verify-release-contract.sh
src/: allowlist.rs  audit.rs  certgen.rs  config.rs  entropy.rs  errors.rs  gitleaks_rules.rs  hooks.rs  kingfisher.rs  launcher.rs  lib.rs  logging.rs  logscrub.rs  main.rs  pipeline.rs  placeholder.rs  policy.rs  proxy.rs  redaction.rs  sensitive.rs  stats.rs  test_support.rs  vault.rs
src/detector/: embedded.rs  gitleaks.rs  mod.rs
src/launcher/: bootstrap.rs  doctor.rs  init.rs
src/launcher/bootstrap/: autostart.rs  detection.rs  no_proxy.rs  proxy_daemon.rs  runner.rs  tests.rs
src/proxy/: common.rs  http.rs  streaming.rs  websocket.rs
tests/: bootstrap_layout.rs  detector_embedded.rs  detector_gitleaks.rs  docs_placeholder_contract.rs  docs_runtime_contract.rs  e2e_cli.rs  e2e_cli_layout.rs  e2e_cli_support.rs  integration_proxy.rs  launcher_layout.rs  pipeline.rs  placeholder.rs  placeholder_fast_paths.rs  placeholder_test_assertions.rs  policy.rs  production_readiness_docs.rs  proxy_layout.rs  redaction.rs  release_ci.rs  stats.rs  vault.rs
tests/e2e_cli/: command_surface.rs  common.rs  doctor.rs  hooks.rs  init.rs  logging.rs  mitm.rs  process_lifecycle.rs  proxy.rs  rewrite_json.rs  stats.rs
tests/support/: mod.rs
