[package]
name = "keyclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
aho-corasick = "1.1"
base64 = "0.22"
clap = { version = "4.5", features = ["std"] }
hex = "0.4"
futures = "0.3"
http-body-util = "0.1"
hudsucker = "0.24"
rcgen = "0.14"
libc = "0.2"
once_cell = "1.21"
rand = "0.8"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
scrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signal-hook = "0.3"
thiserror = "2.0"
tempfile = "3.23"
tiny_http = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.50", features = ["rt-multi-thread", "signal", "sync", "time"] }
url = "2.5"
wait-timeout = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
