[package]
name = "keyclaw"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Local MITM proxy that keeps secrets out of LLM traffic"
license = "MIT"
readme = "README.md"
repository = "https://github.com/GuthL/KeyClaw"
homepage = "https://github.com/GuthL/KeyClaw"
documentation = "https://docs.rs/keyclaw"
keywords = ["llm", "proxy", "security", "mitm", "secrets"]
categories = ["command-line-utilities", "network-programming"]

resolver = "3"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4.5", features = ["std"] }
hex = "0.4"
futures = "0.3"
http-body-util = "0.1"
hudsucker = "0.24"
rcgen = "0.14"
libc = "0.2"
once_cell = "1.21"
rand = "0.8"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
scrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
signal-hook = "0.3"
thiserror = "2.0"
tempfile = "3.23"
tiny_http = "0.12"
tokio = { version = "1.50", features = ["rt-multi-thread", "signal", "sync", "time"] }
url = "2.5"
x509-parser = "0.18"

[dev-dependencies]
wait-timeout = "0.2"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
